--- a/rapport/Bibliography.tex
+++ b/rapport/Bibliography.tex
@@ -64,7 +64,22 @@
   \emph{Visualizing and Understanding Convolutional Networks, v3},
   \url{https://arxiv.org/abs/1311.2901}.
 
-%%%%% Chapter 2 (Caffe)
+%%%%% Chapter 2 (Techniques Utilisées)
+
+  \bibitem{Bib_RCNN}
+  Ross Girshick, Jeff Donahue, Trevor Darrell, Jitendra Malik,
+  2014, 
+  UC Berkley
+  \emph{Rich feature hierarchies for accurate object detection and semantic segmentation}
+  \url{https://people.eecs.berkeley.edu/~rbg/papers/r-cnn-cvpr.pdf}
+    
+  \bibitem{Bib_FastRCNN}
+  Ross Girshick
+  27 sept 2015, 
+  Microsoft Research
+  \emph{Fast R-CNN}
+  \url{https://arxiv.org/abs/1504.08083}
+  
   \bibitem{Bib_CaffeHome}
   Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff and Karayev, Sergey and Long, Jonathan and Girshick, Ross and Guadarrama, Sergio and Darrell, Trevor,
   2014,
