--- a/rapport/Chapter2.tex
+++ b/rapport/Chapter2.tex
@@ -1,32 +1,54 @@
-\chapter{Prise en main de la bibliothèque Caffe}
+\chapter{Techniques utilisées}
 
-  \section{La méthode R-CNN}
+   \section{R-CNN}
 
-    \subsection{Description}
+    \subsection{Principes}
+      
+      En vue d'aborder les problèmes de détection et de localisation d'objets, nous avons misé sur deux techniques disctintes d'analyse d'images au travers de réseaux neuronaux : 
+      \begin{itemize}
+       \item La proposition de régions d'intérêt (Region Proposal Network, ou RPN)
+       \item La classification d'objets au sein de ces régions (CNN)
+      \end{itemize}
+      
+      Ces deux techniques se retrouvent au sein de l'algorithme R-CNN\cite{Bib_RCNN} (Region-based CNN) implémenté en Matlab.
+      Comme son nom l'indique, R-CNN tire parti de la localisation de regions d'intérêt (Region of Interest ou ROI) avant de procéder à la classification. 
+      Le réseau dédié à la classification opère de manière quasi-analogue à ce que nous avons décrit précédemment pour ses premières couches. Avant les couches entièrement connectées (qui calculent
+      la sortie du réseau) est intercalé le RPN. 
+      Ce dernier va interpréter les résultats des convolutions en vue de soumettre un selection de régions où les objets d'intérêt sont susceptibles de se trouver. 
+      Celui-ci est capable dans le même temps d'estimer la présence ou non d'un objet (objectness score) et d'en donner les limites en tout point de l'image. 
+      La sortie du RPN est constituée de ces régions qui seront ensuite traîtées par les couches pleinement connectées afin de donner les résultats de la classification. 
+      L'ensemble de la chaîne fait appel à plusieurs couches de convolution et est entraînable. 
+      La figure suivante établit le récapitulatif de ce fonctionnement.  
+     
+      
+    \subsection{Approche pratique}
     
-      L'application de CNNs aux problèmes de classification est ici abordée à travers la bibliothèque open-source Caffe, développée
+      En pratique, R-CNN a ouvert le champs à des recherches connexes visant notamment à en reprendre les principes fondateurs tout en améliorant sa vitesse de traitement \cite{Bib_FastRCNN}. 
+      Nous avons retenu pour ce travail Faster-RCNN\cite{Bib_FasterRCNN}, qui est à notre connaissance l'implémentation la plus récente basée sur R-CNN. 
+      Nativement implémentée en Python et en Matlab ce travail s'oriente, comme ses prédecesseurs, vers l'application de CNN à la classification et à la détection d'objets.  
+      
+      La classification est assurée grâce à la bibliothèque open-source Caffe, développée
       par Berkley Vision and Learning Center (BVLC)\cite{Bib_CaffeHome}. Une documentation complète du framework est disponible sur le site internet 
       officiel\cite{Bib_CaffeTuto}, décrivant notamment les éléments de référence afin de concevoir, entraîner et tester des réseaux de neurones. 
       
-      En vue d'aborder les problèmes de détection et de localisation d'objets, nous avons misé sur Faster R-CNN\cite{Bib_FasterRCNN}, permettant d'étendre dans ce sens les possibilités offertes par Caffe.
-      Cette application des réseaux convolutifs se base sur des régions de l'image, on parle de R-CNN (Region-based CNN).
-      Il est alors possible de tirer les positions de régions d'intérêt (ROI, Region of Interest) contenant les objets classifiés au moyen du framework Caffe. 
-      Enfin notons que Faster R-CNN est nativement implémenté selon deux versions, en Python et en Matlab. 
-      
-      Faster R-CNN est orienté vers la détection d'objets en quasi temps-réel, s'appuyant sur des avancées telles que SPPnet ou Fast R-CNN. 
-      Cependant, les précédentes incarnations de ces algorithmes étaient freinées par le temps nécessaire en amont de la détection, à savoir la proposition de régions d'intérêt (Region Proposal) nécessitant validation. 
-      Parmi les méthodes de propositions de régions les plus connues, on trouve celles tirées de conversion de l'image en superpixels, ou encore celles basées sur le glissement d'une fenêtre sur la surface à traiter. L'approche adoptée par Fast et Faster R-CNN est différente. 
+      L'avancée majeure de Faster R-CNN concerne la chaîne de détection, qui peut se dérouler en quasi temps-réel. 
+      En effet, les précédentes incarnations de l'algorithme étaient freinées par le temps nécessaire en amont de la détection, à savoir la proposition de régions d'intérêt. 
+      Parmi les méthodes de propositions de régions les plus connues, on trouve celles tirées de conversion de l'image en superpixels, ou encore celles basées sur le glissement d'une fenêtre sur la surface à traiter. 
+      L'approche adoptée par Fast et Faster R-CNN est différente. 
       Elle vise à séparer le problème de proposition d'objet de celui de détection de l'objet, tout en mutualisant un certain nombre de données entre ces deux facettes. 
-      Le framework employé va donc être composé de plusieurs modules aux objectifs disctincts : 
+      Le framework employé va donc être composé de plusieurs modules aux objectifs disctincts (qui peuvent être mis en prallèle avec ceux décrits précédemment) : 
       
       \begin{itemize}
-       \item Un module visant à proposer des régions d'intérêt appelé RPN (Region Proposal Network)
+       \item Un module RPN (Region Proposal Network)
        \item Un module de détection d'objet au sein des régions d'intérêt (Faster R-CNN) 
-       \item Un module de classification basé sur le bibliothèque Caffe
+       \item Un module de classification basé sur la bibliothèque Caffe
       \end{itemize}
       
-      Ici, l'ensemble de la chaîne fait appel à plusieurs couches de convolution et est entraînable. 
-      L'objectif d'optimisation liée à la detection d'objets est également atteint, 
+      Dans Faster R-CNN, les cartes de caractéritiques résultant de la convolution sont mises au service de suggestions de régions délimitant un objet (region proposal) au sein de l'image. Le réseau se voit également
+      complété d'un RPN (Region Proposal Network). Un RPN est un type de CNN capable simultanément d'estimer la présence ou non d'un objet (objectness score) et d'en donner les limites, en tout point de l'image.
+      Un RPN est entraînable de bout-en-bout. 
+      
+      L'objectif d'optimisation liée à la detection d'objets est atteint par le framework, 
       puisqu'on observe une réduction du goulet d'étranglement représenté par la proposition de régions d'intérêt à 0.01 seconde par image sur GPU (sur PASCAL VOC). 
       Une autre évolution introduite par Faster R-CNN et RPN consiste à alterner l'utilisation des deux premiers modules, tout en partageant les caractéritiques résultant des convolutions respectives. 
       Cela aboutit en une amélioration du temps de traîtement de l'image, pour les phases de test et d'entraînement. 
@@ -34,10 +56,5 @@
       Notons également que depuis sa publication en 2015, Faster R-CNN et RPN ont compté sur plusieurs premières places à des compétitions internationales, des applications dans divers domaines tels que la détection
       d'objets 3D ou encore l'intégration à des produits commerciaux grands publics tels que Pinterest. 
       
-    \subsection{Principes}
-      
-      Dans Faster R-CNN, les cartes de caractéritiques résultant de la convolution sont mises au service de suggestions de régions délimitant un objet (region proposal) au sein de l'image. Le réseau se voit également
-      complété d'un RPN (Region Proposal Network). Un RPN est un type de CNN capable simultanément d'estimer la présence ou non d'un objet (objectness score) et d'en donner les limites, en tout point de l'image.
-      Un RPN est entraînable de bout-en-bout 
-      
+      \subsection{Principes}
       
