update rapport chap 2

--- a/rapport/Bibliography.tex
+++ b/rapport/Bibliography.tex
@@ -101,4 +101,25 @@
   \emph{Faster R-CNN: Towards Real-Time Object Detection with Region Proposal Networks},
   \url{https://arxiv.org/abs/1506.01497}.
   
+
+  \bibitem{Bib_FasterRCNN_encapsulation}
+  Ylhang Lou,
+  27 oct 2014,
+  \emph{Faster RCNN Encapsulation Cplusplus},
+  \url{http://www.cnblogs.com/louyihang-loves-baiyan/p/5493344.html}.  
+  
+  \bibitem{Bib_SURF}
+  Herbert Bay, Tinne Tuytelaars, Luc Van Gool, 
+  14 mai 2016,
+  ETH Zurich, BIWI,
+  K. U. Leuven, ESAT-PSI,
+  \emph{Speeded-Up Robust Features (SURF)}
+  \url{http://www.cs.jhu.edu/~misha/ReadingSeminar/Papers/Bay08.pdf}
+  
+  \bibitem{Bib_SURFOpenCV}
+  OpenCV 3.0.0-dev documentation
+  OpenCV-Python Tutorials
+  \emph{Introduction to SURF (Speeded-Up Robust Features)}
+  \url{http://docs.opencv.org/3.0-beta/doc/py_tutorials/py_feature2d/py_surf_intro/py_surf_intro.html}
+  
 \end{thebibliography}
