--- a/rapport/Bibliography.tex
+++ b/rapport/Bibliography.tex
@@ -122,4 +122,49 @@
   \emph{Introduction to SURF (Speeded-Up Robust Features)}
   \url{http://docs.opencv.org/3.0-beta/doc/py_tutorials/py_feature2d/py_surf_intro/py_surf_intro.html}
   
+\bibitem{Bib_HOG}
+	Navneet Dalal, Bill Triggs
+	INRIA Rhone-Alps, 655 avenue de l’Europe, Montbonnot 38334, France
+	\emph{Histograms of Oriented Gradients for Human Detection}
+	\url{http://archive.wikiwix.com/cache/?url=http%3A%2F%2Fwww.acemedia.org%2FaceMedia%2Ffiles%2Fdocument%2Fwp7%2F2005%2Fcvpr05-inria.pdf}
+	
+\bibitem{Bib_STAPLE}
+	Luca Bertinetto, Jack Valmadre, Stuart Golodetz, Ondrej Miksik, Philip H.S. Torr
+	University of Oxford
+	\emph{Staple: Complementary Learners for Real-Time Tracking}
+	\url{http://www.robots.ox.ac.uk/~tvg/publications/2016/staple.pdf}
+
+%%%%% Introduction
+
+\bibitem{Bib_mondepix}
+	Morgane Tual,
+	28  Jul 2015,
+	Le Monde
+	\emph{Comment le "deep learning" révolutionne l'intelligence artificielle}
+	\url{http://www.lemonde.fr/pixels/article/2015/07/24/comment-le-deep-learning-revolutionne-l-intelligence-artificielle_4695929_4408996.html}
+
+\bibitem{Bib_usinedigitale}
+	Julien Bergounhoux,
+	18 jan 2017,
+	Usine Digitale
+	\emph{Deep Learning: Microsoft rachète la startup quebecoise Maluuba}
+	\url{http://www.usine-digitale.fr/article/deep-learning-microsoft-rachete-la-startup-quebecoise-maluuba.N487859}
+
+\bibitem{Bib_silicon}
+	Rénald Fléchaux,
+	6 fév 2017,
+	Usine Digitale
+	\emph{IA : Intel passe à l’offensive sur le Deep Learning}
+	\url{http://www.silicon.fr/ia-intel-passe-a-loffensive-sur-le-deep-learning-168399.html}
+
+\bibitem{Bib_ilsvrc}
+	2015
+	\emph{ILSVRC 2015: results}
+	\url{http://image-net.org/challenges/LSVRC/2015/results}
+
+\bibitem{Bib_votc}
+	2016
+	\emph{VOT Challenge 2016 results}
+	\url{http://www.votchallenge.net/vot2016/download/vot_2016_paper.pdf}
+
 \end{thebibliography}
