--- a/rapport/DeepLearning.tex
+++ b/rapport/DeepLearning.tex
@@ -77,6 +77,12 @@
   \input{TitlePage}
 
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+  %                      Abstract                     %
+  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+  \input{Resume}
+
+  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   % 	           Table of Contents                  %
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -87,8 +93,10 @@
   % 	                Chapters                      %
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+  \input{Introduction}
   \input{Chap/Chapter1} % Apprentissage profond
-  \input{Chap/Chapter2} % Caffe
+  \input{Chap/Chapter2} % Techniques
+  \input{Chap/Chapter3} % Vue globale
 
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   % 	                Glossary                      %
